# onedl-mmcv

./: .dockerignore  .pre-commit-config.yaml  .pypirc  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  LICENSE  README.md  README_zh-CN.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml
.github/workflows/: build-wheel-builder-images.yml  debug_sccache_cuda.yml  docker.yml  lint.yml  merge_stage_test.yml  pr_stage_test.yml  publish-cuda-to-wheelhouse.yml  publish-to-pypi.yml  publish.yml  publish_arm64_legacy.yml
ci/: build-matrix.json  free_disk.sh  install_ccache.sh  install_sccache.sh  prune_github_cache.py  repair_wheel.sh  sccache_probe.py  setup_compiler.sh
docker/: README.md
docker/release/: Dockerfile
docs/en/: compatibility.md  conf.py  faq.md
docs/en/_static/: update_onedl_mmcv_versions-linux.py  version.json
docs/en/_static/css/: readthedocs.css
docs/en/community/: contributing.md
docs/en/get_started/: build.md  installation.md
docs/zh_cn/: compatibility.md  conf.py  faq.md
docs/zh_cn/community/: contributing.md
docs/zh_cn/get_started/: build.md  installation.md  previous_versions.md
mmcv/: version.py
mmcv/cnn/: __init__.py
mmcv/cnn/rfsearch/: search.py
mmcv/image/: photometric.py
mmcv/ops/: corner_pool.py  deform_conv.py  multi_scale_deform_attn.py  nms.py  tin_shift.py
mmcv/ops/csrc/common/cuda/: line_nms_cuda_kernel.cuh
mmcv/ops/csrc/pytorch/: line_nms.cpp  pybind.cpp
mmcv/ops/csrc/pytorch/cuda/: cudabind.cpp  line_nms_cuda.cu
mmcv/transforms/: processing.py
scripts/: check_wheel_metadata.py  publish_wheelhouse.py  release_matrix.py  select_torch.py  validate_release_tag.py  write_build_manifest.py
tests/test_image/: test_photometric.py
tests/test_ops/: test_cc_attention.py  test_deform_conv.py  test_furthest_point_sample.py  test_group_points.py  test_iou3d.py  test_line_nms.py  test_masked_conv2d.py  test_modulated_deform_conv.py  test_ms_deformable_attn.py  test_nms.py  test_onnx.py  test_psa_mask.py  test_voxelization.py
