
[project]
name = "onedl-mmcv"
version = "2.3.7.post1"
description = "OneDL Lab Computer Vision Foundation"
authors = [
    { name = "VBTI Contributors", email = "oss-team@vbti.nl" },
    { name = "OneDL MMCV Contributors" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["computer vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "addict",
    "onedl-mmengine>=0.10.8rc1",
    "opencv-python",
    "numpy",
    "packaging",
    "Pillow",
    "pyyaml",
    "regex; sys_platform == 'win32'",
    "yapf",
]

[dependency-groups]
docs = [
    "docutils",
    "markdown>=3.4.0",
    "myst-parser",
    "opencv-python",
    "pytorch_sphinx_theme @ git+https://github.com/VBTI-development/onedl_sphinx_theme.git@master",
    "sphinx",
    "sphinx-copybutton",
    "sphinx_markdown_tables>=0.0.16",
    "sphinxcontrib-jquery",
    "torch",
    "urllib3"
]
test = [
    "coverage",
    "lmdb",
    "onnx",
    "onnxruntime",
    "onnxscript",
    "pytest",
    "PyTurboJPEG>=1,<2",
    "scipy",
    "tifffile"
]
optional = [
    "ninja",
    "psutil"
]
build = [
    "packaging>=24.2",
    "setuptools>=80",
    "wheel",
]

[project.optional-dependencies]
torch = [
    "torch==2.10.0;        python_version=='3.12'",
    "torch>=2.4; python_version!='3.12'",
    "torchvision",
]

[project.urls]
Homepage = "https://onedl.ai"
Repository = "https://github.com/VBTI-development/onedl-mmcv"
Documentation = "https://onedl-mmcv.readthedocs.io/en/latest/"

[build-system]
requires = [
    "setuptools>=80",
    "wheel",
    "packaging>=24.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.cibuildwheel]
build-frontend = { name = "build[uv]", args = ["--no-isolation"] }
skip = "pp* *-musllinux_*"
test-command = "python -c \"import mmcv; print(mmcv.__version__); import mmcv.ops; from mmcv.utils import ext_loader; assert ext_loader.check_ops_exist()\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-build = "bash ci/install_sccache.sh && python -m pip install uv && python scripts/select_torch.py --group-id \"$MMCV_BUILD_GROUP\""
before-test = "python scripts/select_torch.py --group-id \"$MMCV_BUILD_GROUP\""
repair-wheel-command = "bash ci/repair_wheel.sh {wheel} {dest_dir}"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = true
split_before_expression_after_opening_paren = true

[tool.isort]
line_length = 79
multi_line_output = 0
extra_standard_library = "setuptools,logging,os,warnings,abc"
known_first_party = "mmcv"
known_third_party = "addict,cv2,matplotlib,numpy,onnx,packaging,pytest,pytorch_sphinx_theme,scipy,sphinx,torch,torchvision,yaml,yapf"
no_lines_before = "STDLIB,LOCALFOLDER"
default_section = "THIRDPARTY" # codespell:ignore

[tool.codespell]
quiet-level = 3
ignore-words-list = "inout,hist,ba,ro,inh"

[tool.uv]
no-build-isolation-package = ["torch"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
